--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mocha": "^6.0.2",
     "mongodb": "^3.1.13",
     "mongoose": "^5.4.16",
+    "multer": "^1.4.1",
     "supertest": "^3.4.2",
     "validator": "^10.11.0"
   }
