--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.0",
     "lodash": "^4.17.11",
+    "log4js": "^4.0.2",
     "mocha": "^6.0.2",
     "mongodb": "^3.1.13",
     "mongoose": "^5.4.16",
+    "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "supertest": "^3.4.2",
     "validator": "^10.11.0"
